--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     margin: 1rem;
     padding: 0;
     background-color: rgb(248, 248, 248);
+    cursor:url("./img/cursor.png"), default;
 }
 
 .flex-horizontal-parent {
